# docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/health-check": {
+        "/api/health-check": {
             "get": {
                 "description": "do ping",
                 "consumes": [
@@ -41,9 +41,9 @@
                 }
             }
         },
-        "/v1/category/{id}": {
+        "/category/{id}": {
             "get": {
-                "description": "Get Category details example",
+                "description": "Get category details by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -53,7 +53,7 @@
                 "tags": [
                     "Category"
                 ],
-                "summary": "Get Category details example",
+                "summary": "Get category by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -76,26 +76,16 @@
                             "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_category_model.StandardResponse"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_category_model.StandardResponse"
-                        }
-                    },
                     "404": {
-                        "description": "404 page not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_category_model.StandardResponse"
                         }
                     }
                 }
-            },
+            }
+        },
+        "/v1/category/{id}": {
             "put": {
                 "description": "Update Category example",
                 "consumes": [
@@ -332,7 +322,7 @@
         },
         "/v1/product/{id}": {
             "get": {
-                "description": "Get Product details example",
+                "description": "Get Product details by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -350,69 +340,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.ProductDetailResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.StandardResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.StandardResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "404 page not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.StandardResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update Product example",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Update Product example",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Product ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Product",
-                        "name": "product",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.UpdateProductRequest"
-                        }
                     }
                 ],
                 "responses": {
@@ -502,6 +429,71 @@
                     }
                 }
             }
+        },
+        "/v1/update-product/{id}": {
+            "put": {
+                "description": "Update Product by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Update Product example",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Product",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.UpdateProductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.StandardResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.StandardResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.StandardResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "404 page not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.StandardResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -531,7 +523,7 @@
                 "name": {
                     "type": "string"
                 },
-                "parent_id": {
+                "parentId": {
                     "type": "integer"
                 }
             }
@@ -541,7 +533,7 @@
             "required": [
                 "description",
                 "name",
-                "parent_id"
+                "parentId"
             ],
             "properties": {
                 "description": {
@@ -550,7 +542,7 @@
                 "name": {
                     "type": "string"
                 },
-                "parent_id": {
+                "parentId": {
                     "type": "integer"
                 }
             }
@@ -561,7 +553,7 @@
                 "data": {
                     "type": "object",
                     "properties": {
-                        "category_id": {
+                        "categoryId": {
                             "type": "integer"
                         }
                     }
@@ -591,7 +583,7 @@
             "required": [
                 "description",
                 "name",
-                "parent_id"
+                "parentId"
             ],
             "properties": {
                 "description": {
@@ -600,7 +592,7 @@
                 "name": {
                     "type": "string"
                 },
-                "parent_id": {
+                "parentId": {
                     "type": "integer"
                 }
             }
@@ -608,14 +600,14 @@
         "github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.CreateProductRequest": {
             "type": "object",
             "required": [
-                "category_id",
+                "categoryId",
                 "description",
                 "name",
                 "price",
                 "stock"
             ],
             "properties": {
-                "category_id": {
+                "categoryId": {
                     "type": "integer"
                 },
                 "description": {
@@ -635,7 +627,7 @@
         "github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.ProductDetailResponse": {
             "type": "object",
             "properties": {
-                "category_id": {
+                "categoryId": {
                     "type": "integer"
                 },
                 "description": {
@@ -670,14 +662,14 @@
         "github_com_MitulShah1_golang-rest-api-template_internal_handlers_product_model.UpdateProductRequest": {
             "type": "object",
             "required": [
-                "category_id",
+                "categoryId",
                 "description",
                 "name",
                 "price",
                 "stock"
             ],
             "properties": {
-                "category_id": {
+                "categoryId": {
                     "type": "integer"
                 },
                 "description": {
