# internal/handlers/category/model/model.go
@@ -1,14 +1,16 @@
+// Package model provides data structures for category-related operations.
+// It includes request and response models for category API endpoints.
 package model
 
 type StandardResponse struct {
-	IsSuccess bool        `json:"success"`
-	Message   string      `json:"message"`
-	Data      interface{} `json:"data"`
+	IsSuccess bool   `json:"success"`
+	Message   string `json:"message"`
+	Data      any    `json:"data"`
 }
 
 type CreateCategoryRequest struct {
-	Name        string `json:"name" validate:"required"`
-	ParentID    *int   `json:"parent_id" validate:"omitempty,required"`
+	Name        string `json:"name"        validate:"required"`
+	ParentID    *int   `json:"parentId"    validate:"omitempty,required"`
 	Description string `json:"description" validate:"required"`
 }
 
@@ -16,14 +18,14 @@ type CreateCategoryResponse struct {
 	IsSuccess bool   `json:"success"`
 	Message   string `json:"message"`
 	Data      struct {
-		ID int64 `json:"category_id"`
+		ID int64 `json:"categoryId"`
 	} `json:"data"`
 }
 
 type CategoryDetail struct {
 	ID          int64  `json:"id"`
 	Name        string `json:"name"`
-	ParentID    *int   `json:"parent_id"`
+	ParentID    *int   `json:"parentId"`
 	Description string `json:"description"`
 }
 
@@ -34,7 +36,7 @@ type CategoryByIDResponse struct {
 }
 
 type UpdateCategoryRequest struct {
-	Name        string `json:"name" validate:"required"`
-	ParentID    *int   `json:"parent_id" validate:"omitempty,required"`
+	Name        string `json:"name"        validate:"required"`
+	ParentID    *int   `json:"parentId"    validate:"omitempty,required"`
 	Description string `json:"description" validate:"required"`
 }
